--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main {
   width: 100%;
   max-width: 1140px;
   height: 100vh;
-  background-color: hsl(230, 20%, 94%);
+  background-color: #e9ebef;
 }
 
 .puff {
@@ -24,6 +24,10 @@ main {
   flex-direction: column;
   border-radius: 24px;
   border-bottom: 4px solid hsl(180, 24%, 81%);
+}
+.puff img {
+  margin: -32px -24px 32px -24px;
+  border-radius: 24px 24px 0 0;
 }
 .puff h1 {
   margin: 0;
