--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-$main-bg-color: hsl(230, 20%, 94%);
+$main-bg-color: #e9ebef;
 $puff-bg-color: white;
 $primary-color: hsl(180, 24%, 81%);
 
@@ -32,6 +32,11 @@ main {
 
     border-radius: 24px;
     border-bottom: 4px solid $primary-color;
+
+    img {
+        margin: -32px -24px 32px -24px;
+        border-radius: 24px 24px 0 0;
+    }
 
     h1 {
         margin: 0;
