--- a/style.css
+++ b/style.css
@@ -7,11 +7,23 @@ body {
 }
 
 main {
-  padding: 48px 24px;
+  padding: 96px 0;
   width: 100%;
   max-width: 1140px;
   min-height: 100vh;
   background-color: #e9ebef;
+}
+
+section {
+  background-color: hsl(0, 0%, 96%);
+  padding: 80px 64px;
+}
+
+h1 {
+  margin: 0 auto 64px;
+  color: hsl(180, 69%, 25%);
+  text-align: center;
+  font-size: 48px;
 }
 
 .puff-wrapper {
@@ -28,12 +40,12 @@ main {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  border-radius: 24px;
+  border-radius: 0 24px;
   border-bottom: 4px solid hsl(180, 24%, 81%);
 }
 .puff img {
   margin: -32px -24px 32px -24px;
-  border-radius: 24px 24px 0 0;
+  border-radius: 0px 24px 0 0;
 }
 .puff h2 {
   margin: 0;
